--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,22 @@
    <style>h2 {text-align:center;}</style>
    
 </head>
-<body bgcolor=#FFFF>
-   <h1 style="color:mediumvioletred">HEART PREDICTION MODEL</h1>
-   <h2> Select Model to predict chance of getting HEART ATTACK</h2>
-   <p style="text-align:center">
-   <a style="color:chocolate" href='/randomforestclassifier'>1.RANDOM FOREST CLASSIFIER</a>
-    <p style="text-align:center">
-   <a style="color:chocolate" href='/fourmodelclassifier'>2.ENSEMBLE MODEL</a>
-   </p>
+<h1> </h1>
+<body background= '/static/bg2.jpg' height="1920" weight="720">
+   <h1 style="color:#E433FF"><u>HEART DISEASE RISK PREDICTION MODEL</u></h1>
+
+<h2 style="color:red; font-size: 25px"> World Health Organization has estimated 12 million deaths occur worldwide, every year due to Heart diseases. Half the deaths in the United States and other developed countries are due to cardio vascular diseases. The early prognosis of cardiovascular diseases can aid in making decisions on lifestyle changes in high risk patients and in turn reduce the complications. </h2>
+   
+   
+    
+
+     <h2 style="color:orange">So Here you can predict risk factor of heart disease in next 10 years. </h2>
+     <p style="text-align:center">
+     <a style="font-size: 35px;color:blue" href='/fourmodelclassifier'>PREDICT</a>
+     </p>
+
+   
+   
+    
 </body>
 </html>
