--- a/templates/output.html
+++ b/templates/output.html
@@ -3,10 +3,13 @@
     <title>Here is the predicted output</title>  
     <style>h1 {text-align:center;}</style>
 </head>  
-<body bgcolor='wheat'>  
+<body'>  
 {% if data %}
+     
+     <h1> Take Care of Yourself. </h1>
      <h1 style="color:red"> The chance of getting heart attack in next 10 years is HIGH</h1>
 {% else %}
+     <h1> Hurray......You are Safe. </h1>
      <h1 style="color:green"> The chance of getting heart attack in next 10 years is LOW</h1>
 {% endif %}
  
